# internal-integrations-foundation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLUGIN_ARCHITECTURE_STRATEGY.md  README.md  UI_LATENCY_STRATEGY.md  compose.yml  coverate_report.txt  delme.py  pyproject.toml  scaffold.py.py  todo.md
docker/: Dockerfile
docs/: 01-SYSTEM_TOPOLOGY.md  02-TOOLING_DECISIONS.md  03-STATE_SYNC_MECHANICS.md  04-IPAAS_REJECTION.md  05-FRONTEND_STRATEGY.md  06-ROUTING_AND_RECOVERY.md  07-OBSERVABILITY_AND_CIRCUIT_BREAKING.md  08-UI_LATENCY_AND_STATE_PARADIGM.md
scripts/: fix_enum_case.py  fix_mapping_enums.py  generate_project_context.py  generate_version.py  migrate_constants.py  migrate_domainconfig.py  migrate_domainconfig_v2.py  migrate_phase2_dynamic_fields.py  migrate_routing_v2.py  migrate_rules.py  migrate_rules_v3.py  migrate_synclog.py
src/: version.py
src/app/: admin.py  main.py  schemas.py  webhooks.py
src/config/: settings.py
src/core/: broadcaster.py  clients.py  database.py  logger.py  notifications.py  security.py  utils.py
src/domain/pf_jira/: mapping.py  models.py  resolver.py  router.py  tasks.py
src/domain/users/: models.py  router.py
src/static/js/: sse_client.js
src/templates/: audit.html  base.html  dashboard.html  health.html  rules.html  settings.html  sync.html  telemetry.html  users.html
src/templates/partials/: _audit_tbody.html  _edit_routing_rule_modal.html  _health_integrations.html  _pf_schema_modal.html  _project_rules_tbody.html  _routing_rules_tbody.html  _rule_form_modal.html  _schema_fields.html  _task_rules_tbody.html  _toast.html  (+1 more)
tests/: __init__.py  base.py  test_admin_rules.py  test_audit_api.py  test_audit_search.py  test_auth.py  test_cache_manager.py  test_clients.py  test_database.py  test_jira_cache.py  test_jira_validation  test_jira_validation.py  test_logger.py  test_mapping.py  test_notifications.py  test_pf_adf_parser.py  test_pf_jira_resolver.py  test_pf_jira_router.py  test_pf_jira_tasks.py  test_sso_health.py  test_users_router.py  test_webhooks.py
