[project]
name = "pf-jira-sync"
version = "0.1.0"
description = "Middleware / Integration platform for PeopleForce to Jira Synchronization and other nice things"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "sqlmodel",
    "pydantic-settings",
    "httpx",
    "arq",
    "redis",
    "loguru",
    "authlib",
    "itsdangerous",
    "jinja2",
    "python-multipart",
    "aiosqlite>=0.22.1",
    "psutil>=7.2.2",
    "coverage>=7.13.4",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "types-redis",
    "types-requests",
    "pre-commit",
]

[tool.ruff]
line-length = 120
target-version = "py311"

# Migrated linter settings
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Security"
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
